Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11283

PropertyChanges do not work for attached properties

XMLWordPrintable

      See tst_qdeclarativestates::attachedPropertyChanges() test. The PropertyChanges {} does not change the attached property, or issue an error.

      import Qt.test 1.0
      import Qt 4.7
      
      Item {
          id: item
          width: 100; height: 100
          MyRectangle.foo: 0
      
          states: State {
              name: "foo1"
              PropertyChanges {
                  target: item
                  MyRectangle.foo: 1
              }
          }
      
          Component.onCompleted: item.state = "foo1"
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            aakenned Aaron Kennedy
            martjone Martin Jones (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes