Allow custom parsers to handle attached properties

QTBUG-11283